<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.095">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/txtview"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/txtviw2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="12sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"
            android:text="@string/tv_nombre"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/inicio_sesion"
            android:hint="@string/edt_ingrnom"
            android:inputType="textPersonName"
            android:padding="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"
            android:text="@string/tv_email"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/inicio_sesion"
            android:hint="@string/edt_ingreemail"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"
            android:text="@string/tv_contraseña"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/inicio_sesion"
            android:hint="@string/edt_ingreContra"
            android:inputType="textPassword"
            android:padding="12dp" />

        <Button
            android:id="@+id/registerGoogleButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#E5E3D9"
            android:drawableLeft="@drawable/ic_google2"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:text="@string/bttn_rergistrarGoogle"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/registerAppleButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#000000"
            android:drawableLeft="@drawable/ic_apple2"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:text="@string/bttn_RegistarApple"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/registerNormalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:padding="12dp"
            android:text="@string/bttn_sig"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
